--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="viewport" content="icon.png">
+    <meta property="og:site_name" content="v7 Countdown>
+    <meta property="og:title" content="See When v7 Will Be Released">
+    <meta property="og:description" content="Release time might be changed anytime">
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <title>V7 Rng Timer</title>
     <link rel="stylesheet" href="style.css">
