--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     
     <meta name="viewport" content="icon.png">
-    <meta property="og:site_name" content="v7 Countdown>
-    <meta property="og:title" content="See When v7 Will Be Released">
-    <meta property="og:description" content="Release time might be changed anytime">
+    <meta property="og:site_name" content="v7 Countdown, Release Time Might Change Anytime">
+    <meta property="og:description" content="See When v7 Will Be Released">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="295">
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <title>V7 Rng Timer</title>
     <link rel="stylesheet" href="style.css">
